# Juniper-MCP-Server-Demos

./: .gitignore  pyproject.toml
Apstra/: README.md
Apstra/apstra/tools/: get_blueprint_anomalies.py  get_config_audits.py  get_security_zones.py  get_virtual_networks.py
apstra/: server.py
apstra/tools/: __init__.py  api_client.py  apply_system_golden_config.py  get_blueprint_details.py  get_config_audits.py  get_system_details.py  list_blueprints.py
